cambios items 1,2 y 4
